--- a/youtube.html
+++ b/youtube.html
@@ -10,7 +10,6 @@
             display : grid;
             grid-template-columns: 20% 20% 20% 20%;
             grid-gap: 5%;
-            background : black;
         }
         /* #videos > div {
             width  : 100px;
@@ -39,7 +38,7 @@
         #nav_bar {
             /* border  : 1px solid white; */
             display: grid;
-            grid-template-columns: 5% 18% 43% 15% 3% 3% 3% 9%;
+            grid-template-columns: 8% 15% 43% 15% 3% 3% 3% 9%;
         }
         /*
         #nav_bar > div ,span{
@@ -54,8 +53,8 @@
         }
         #body {
           display :grid ;
-          grid-template-columns: 8% 85%;
-          grid-gap : 2%;
+          grid-template-columns: 8% 88%;
+          grid-gap : 10px;
           margin-top : 10px;
         }
         
@@ -67,6 +66,9 @@
         .fonts {
           font-size : 12px;
          
+        }
+        #side_bar > div:nth-child(1) {
+          cursor : pointer;
         }
     </style>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
@@ -85,7 +87,7 @@
           <div id="input_box">
             <input type="text" id="query" placeholder="Search for a Video" />
             <button onclick="searchVideos()">
-                <img src="https://img.icons8.com/material-rounded/24/ffffff/search.png"/>
+                <img style="cursor : pointer" src="https://img.icons8.com/material-rounded/24/ffffff/search.png"/>
             </button>
           </div>
           <div id="mic">
@@ -110,7 +112,7 @@
 
    <div id="body">
      <div id="side_bar">
-      <div>
+      <div  onclick="showTrendings()" >
         <div class="material-icons-outlined">
           home
           </div>
@@ -184,6 +186,7 @@ videos.append(div)
     }
 
 function  showTrendings(){
+  videos.innerHTML = null;
   fetch("https://youtube.googleapis.com/youtube/v3/videos?part=snippet%2CcontentDetails%2Cstatistics&chart=mostPopular&maxResults=20&regionCode=IN&key=AIzaSyAajP1_w1HjEXkwQrcbEcArx3d_B6lJQxA")
   .then((res)=>{
     return res.json()
